# routelit-mantine

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup-python-env/: action.yml
.github/workflows/: on-release-main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
src/example/: example.py
src/frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/frontend/src/: App.tsx  index.ts  lib.css  main.tsx  setup.ts
src/frontend/src/components/: action-icon.tsx  anchor.tsx  appshell.tsx  checkbox-group.tsx  chip-group.tsx  generic-group.tsx  icon.tsx  index.tsx  nav-link.tsx  provider.tsx  radio-group.tsx  switch-group.tsx
src/routelit_mantine/: __init__.py  builder.py  utils.py
tests/: builder_test.py
